--- a/frontend/css/a2.css
+++ b/frontend/css/a2.css
@@ -9,7 +9,7 @@
     font-family: 'Encode Sans', sans-serif;
     text-align: center;
     width: 30%;
-    margin-top: 4%
+    margin-top: 1%
 }
 .container-h2-a2{
     margin-bottom: 4%;
@@ -22,9 +22,10 @@
 
 .form-signin label {
     display: block;
-    margin-top: 10px;
+    margin-top: 5px;
     text-align: left;
     font-size: 1.1rem;
+    padding-top: 5px;
     padding-bottom: 15px;
     padding-left: 5px;
     font-family: 'Encode Sans', sans-serif;
@@ -36,15 +37,14 @@
 }
 
 .form-signin input[type="text"] {
-    margin-bottom: 10px;
     border-radius: 15px;
-    padding: 15px;
+    padding: 10px;
     border: 3px solid #5A5A5A;
 }
 
 .form-signin input[type="email"] {
     border-radius: 15px;
-    padding: 15px;
+    padding: 10px;
     border: 3px solid #5A5A5A;
     border-radius: 15px;
 }
@@ -52,14 +52,14 @@
 .form-signin input[type="password"] {
     margin-bottom: 10px;
     border-radius: 15px;
-    padding: 15px;
+    padding: 10px;
     border: 3px solid #5A5A5A;
 }
 .botao-a2 {
     background-color: #0057DF !important;
     font-weight: 700;
     font-size: 25px;
-    margin-top: 10%;
+    margin-top: 1%;
     margin-bottom: 20px;
     border: 4px solid #5A5A5A;
     border-radius: 15px;
