--- a/frontend/css/a3.css
+++ b/frontend/css/a3.css
@@ -10,17 +10,21 @@
     line-height: 11px;
     padding-top: 18px;
 }
+.header-div{
+    margin-top: 0;
+    padding-top: 35px;
+}
 .header-nav-a1 {
     margin-right: 100px;
     padding: 10px;
-    padding-bottom: 55px;
+    padding-bottom: 50px;
     font-size: 25px;
     text-decoration: none;
     color: white;
 }
 .header-nav-a2 {
     padding: 10px;
-    padding-bottom: 55px;
+    padding-bottom: 48px;
     font-size: 25px;
     text-decoration: none;
     color: white;
@@ -42,10 +46,11 @@
 
 .container-main {
     width: 35%;
-    margin-top: 7%;
+    margin-top: 4%;
 }
 
-.div-select {
+.div-select { 
+    
     padding: 20px;
     font-family: 'Encode Sans', sans-serif;
     font-style: normal;
@@ -54,8 +59,37 @@
     line-height: 12px;
     color: #5A5A5A;
 }
+.div-data {
+    padding: 20px;
+    font-family: 'Encode Sans', sans-serif;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 12px;
+    color: #5A5A5A;
+}
+.div-hora {
+    padding: 20px;
+    font-family: 'Encode Sans', sans-serif;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 25px;
+    line-height: 12px;
+    color: #5A5A5A;
+}
+.p-data {
+    font-size: 25px;
+    padding-left: 3px;
+    padding-bottom: 15px;
+    margin-bottom: 0;
+}
 
-.select-bar {
+.data{
+    padding: 22px;
+    border: 3px solid #5A5A5A;
+    border-radius: 15px;
+}
+
+.botao-bar {
     padding: 15px;
     border: 3px solid #5A5A5A;
     border-radius: 15px;
@@ -71,6 +105,7 @@
 }
 .div-botao-a3{
     margin-bottom: 10px;
+    margin-bottom: 11%;
     
 }
 
