--- a/frontend/css/a4.css
+++ b/frontend/css/a4.css
@@ -3,12 +3,13 @@
 @import url(style.css);
 
 
+
 /* header */
 .header-ul {
     font-family: 'Encode Sans', sans-serif;
     font-weight: 700;
     line-height: 11px;
-    padding-top: 18px;
+    padding-top: 20px;
 }
 .header-div{
     margin-top: 0;
@@ -43,39 +44,38 @@
 
 
 /* body */
-
-.container-main {
+.container-main{
     width: 35%;
-    margin-top: 7%;
+    margin-top: 1%;
 }
-
-.div-select {
+.div-p {
     padding: 20px;
+    padding-bottom: 0px;
     font-family: 'Encode Sans', sans-serif;
     font-style: normal;
-    font-weight: 500;
+    font-weight: 500 ;
     font-size: 25px;
     line-height: 12px;
     color: #5A5A5A;
 }
 
-
-.p {
-    padding-left: 3px;
-    padding-bottom: 15px;
-    margin-bottom: 0;
-}
-
-.botao-b4 {
-    background-color: #0057DF !important;
-    font-weight: 700;
-    font-size: 25px;
-    margin-top: 10%;
-    border: 4px solid #5A5A5A;
+.div-agendamento{   
+    width: 80%;
+    padding: 10px;
+    background-color: #D9F8FF;
+    font-family: 'Encode Sans', sans-serif;
     border-radius: 15px;
+    font-size: 17px;
+    border: 3px solid #5A5A5A;
 }
-.div-botao-b4{
-    margin-left: 20px;
-    margin-bottom: 10px;
-    width: 95%;
+.a1{
+    padding-right: 220px;
 }
+.a1-img{
+    width: 7%;
+}
+.a2-img{
+    width: 8%;
+    margin-top: 5px;
+}
+
