--- a/frontend/css/b4.css
+++ b/frontend/css/b4.css
@@ -10,22 +10,26 @@
     line-height: 11px;
     padding-top: 18px;
 }
+
+.header-div{
+    margin-top: 0;
+    padding-top: 35px;
+}
 .header-nav-a1 {
     margin-right: 100px;
     padding: 10px;
-    padding-bottom: 55px;
+    padding-bottom: 50px;
     font-size: 25px;
     text-decoration: none;
     color: white;
 }
 .header-nav-a2 {
     padding: 10px;
-    padding-bottom: 55px;
+    padding-bottom: 48px;
     font-size: 25px;
     text-decoration: none;
     color: white;
 }
-
 .header-ul>.active {
     color: #FFB800;
     width: 78px;
