--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -5,7 +5,7 @@
 header {
     display: flex;
     background-color: #0057DF;
-    height: 150px;
+    height: 130px;
 }
 
 
@@ -25,8 +25,8 @@ header {
 /* body */
 
 .container-cards{
-    width: 37.1%;
-    margin-top: 4%;
+    width: 50.1%;
+    margin-top: 2%;
     font-family: 'Encode Sans', sans-serif;
 }
 .vazio{
@@ -67,7 +67,7 @@ header {
 .footer-bar {
     background-color: #D9D9D9;
     display: flex;
-    height: 150px;
+    height: 120px;
     
 
 }
@@ -85,9 +85,8 @@ header {
     padding-top: 30px;
 }
 footer{
-    height: 150px;
-    top: 85%;
-
+    position: fixed;
+    top: 84%;
     left: 0;
     height: 40px;
     width: 100%;
