--- a/frontend/css/a4.css
+++ b/frontend/css/a4.css
@@ -50,7 +50,7 @@
 }
 .div-p {
     padding: 20px;
-    padding-bottom: 0px;
+    padding-bottom: 10px;
     font-family: 'Encode Sans', sans-serif;
     font-style: normal;
     font-weight: 500 ;
@@ -61,7 +61,9 @@
 
 .div-agendamento{   
     width: 80%;
+    margin: 0;
     padding: 10px;
+    margin-bottom: 10px;
     background-color: #D9F8FF;
     font-family: 'Encode Sans', sans-serif;
     border-radius: 15px;
@@ -78,4 +80,6 @@
     width: 8%;
     margin-top: 5px;
 }
-
+.p-a4{
+    margin: 0;
+}
