--- a/frontend/css/b4.css
+++ b/frontend/css/b4.css
@@ -46,7 +46,7 @@
 
 .container-main {
     width: 35%;
-    margin-top: 7%;
+    margin-top: 2%;
 }
 
 .div-select {
@@ -64,12 +64,12 @@
     background-color: #0057DF !important;
     font-weight: 700;
     font-size: 25px;
-    margin-top: 10%;
+    margin-top: 2%;
     border: 4px solid #5A5A5A;
-    border-radius: 15px;
+    border-radius: 14px;
 }
 .div-botao-b4{
-    margin-left: 20px;
+    margin-left: 12px;
     margin-bottom: 10px;
     width: 95%;
 }
@@ -86,4 +86,5 @@
     padding: 15px;
     border: 3px solid #5A5A5A;
     border-radius: 15px;
+    font-size: 20px;
 }
